...
        options={{ title: 'Explore', tabBarButtonTestID: 'tab-explore', tabBarIcon: tabIcon(SearchOutline, SearchSolid) }}
      />
      <Tabs.Screen
        name="(notifications)"
        options={{
          title: 'Notifications',
          tabBarButtonTestID: 'tab-notifications',
          tabBarIcon: tabIcon(BellOutline, BellSolid),
          tabBarBadge: badge(badges.notifications),
        }}
      />
      <Tabs.Screen
        name="(messages)"
...
